--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -19,4 +19,5 @@ jobs:
         role-to-assume: arn:aws:iam::820137170977:role/iam_role_for_Github_Actions
         role-session-name: GithubActionSession
     env:
+      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_REGION: 'us-west-1'
